--- a/dendrograms/Centroids_Dendrogram.ipynb
+++ b/dendrograms/Centroids_Dendrogram.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "tVeeEWPxqJdX"
       },
@@ -39,7 +39,7 @@
       "metadata": {
         "id": "tNo1NU_-rWZd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
         "id": "JcwhYGb5rdq1",
         "outputId": "bb8b7a3b-5d9a-45d5-a024-0c97f23e783e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "UJUW871Kr2IO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "id": "y8m2XjyHr9cu",
         "outputId": "12347ea1-9fb0-46e5-e0f3-b1f832683700"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "lAoP7z7Ar-1q"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
         "id": "Hy7dnZxEsFwL",
         "outputId": "56dc74f2-883a-4249-c617-0f509d37be59"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "AxGqOHDXsHN5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
         "id": "yQGHnweLsMdr",
         "outputId": "f33ab1b2-928e-4861-9b67-8b29a95229b5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,12 +215,14 @@
         "import scipy.cluster.hierarchy as hac\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from google.colab import files\n",
+        "from scipy.stats import pearsonr"
       ],
       "metadata": {
         "id": "RxWVpkpjvg17"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +234,7 @@
       "metadata": {
         "id": "1bbXqsVKDhA7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +248,9 @@
         "z = hac.linkage(a, method='average', metric='euclidean')\n",
         "plt.figure()\n",
         "plt.title('centroids_combined_no_rgs')\n",
-        "dn = hac.dendrogram(z, labels=frame.index)"
+        "dn = hac.dendrogram(z, labels=frame.index)\n",
+        "#plt.savefig(\"dendrogram_combined_no_rgs.pdf\", format=\"pdf\")\n",
+        "#files.download(\"dendrogram_combined_no_rgs.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -254,9 +258,9 @@
           "height": 284
         },
         "id": "lX5Us8277ZE7",
-        "outputId": "0a08338b-5901-433e-edbe-d9d4067eee89"
+        "outputId": "1aa90b1c-2ff7-4761-883f-2dc9c21f7fe6"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,18 +292,29 @@
         "# add a legend to the plot\n",
         "plt.legend()\n",
         "\n",
-        "plt.show()"
+        "plt.savefig(\"scatter_combined_no_rgs.pdf\", format=\"pdf\")\n",
+        "#files.download(\"scatter_combined_no_rgs.pdf\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 279
+          "height": 297
         },
         "id": "BjjOGiTtlRpF",
-        "outputId": "ac9a0880-94d2-4925-8a77-e0bd50d2c2ff"
+        "outputId": "d43e7cf8-978d-4ef8-89f0-5d1da6b9caf6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<matplotlib.legend.Legend at 0x7f5af0b45220>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -317,35 +332,6 @@
     {
       "cell_type": "code",
       "source": [
-        "centroids_combined_no_rgs"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "12347ea1-9fb0-46e5-e0f3-b1f832683700",
-        "id": "Vgyy1B6MjCeU"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[(6.440333557356271, 4.80336017627178),\n",
-              "  (5.803542918437209, 5.0514861632003925),\n",
-              "  (6.3985527774231015, 5.170552060418552),\n",
-              "  (7.069781534819933, 4.635389850266301)]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "c, coph_dists = cophenet(z,pdist(coords))\n",
         "c"
       ],
@@ -354,9 +340,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sqli8f7KFtUF",
-        "outputId": "54d97649-2d04-485f-8f24-f23a4a598981"
+        "outputId": "f1b3be34-016a-48d6-f217-62d0a8d1f50a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +352,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compute the correlation between the original pairwise distances and the cophenetic distances, which gives us a measure of the statistical significance of the cophenetic correlation coefficient.\n",
+        "corr, pval = pearsonr(pdist(coords), coph_dists)\n",
+        "pval"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hIC6riPTRjFs",
+        "outputId": "08c5a45b-6dc8-4f2a-ffcc-0b7d18e0e187"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.09863296546858795"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
         }
       ]
     },
@@ -380,7 +394,9 @@
         "z = hac.linkage(a, method='average', metric='euclidean')\n",
         "plt.figure()\n",
         "plt.title('centroids_os_basic')\n",
-        "dn = hac.dendrogram(z, labels=frame.index)"
+        "dn = hac.dendrogram(z, labels=frame.index)\n",
+        "plt.savefig(\"dendrogram_os_basic.pdf\", format=\"pdf\")\n",
+        "#files.download(\"dendrogram_os_basic.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -388,9 +404,9 @@
           "height": 284
         },
         "id": "r1qyigjg7BDg",
-        "outputId": "e9103bb1-4a51-4548-ab2d-e14e893d2dda"
+        "outputId": "67c0481b-b517-4315-e409-c2fd2700986b"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -422,7 +438,8 @@
         "# add a legend to the plot\n",
         "plt.legend()\n",
         "\n",
-        "plt.show()"
+        "plt.savefig(\"scatter_os_basic.pdf\", format=\"pdf\")\n",
+        "#files.download(\"scatter_os_basic.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -430,9 +447,9 @@
           "height": 279
         },
         "id": "yDFpqnddsfo5",
-        "outputId": "aa145e8e-c316-4b91-94a8-cbbf7c4d1956"
+        "outputId": "9bdea6fe-12b0-4c7b-8b5c-035fdbeee22a"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -459,9 +476,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AjqnjRQ-Fsns",
-        "outputId": "557a0878-3216-4235-82ef-1470a748addf"
+        "outputId": "e1027949-384f-4e97-a271-468c7005c99f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +488,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compute the correlation between the original pairwise distances and the cophenetic distances, which gives us a measure of the statistical significance of the cophenetic correlation coefficient.\n",
+        "corr, pval = pearsonr(pdist(coords), coph_dists)\n",
+        "pval\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OkjUCuNNR_J1",
+        "outputId": "c2afffc0-dc0c-4210-8f57-08faeffb894c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.018859091577186963"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
         }
       ]
     },
@@ -486,7 +531,9 @@
         "z = hac.linkage(a, method='average', metric='euclidean')\n",
         "plt.figure()\n",
         "plt.title('centroids_cbd_cbd')\n",
-        "dn = hac.dendrogram(z, labels=frame.index)"
+        "dn = hac.dendrogram(z, labels=frame.index)\n",
+        "plt.savefig(\"dendrogram_cbd_cbd.pdf\", format=\"pdf\")\n",
+        "#files.download(\"dendrogram_cbd_cbd.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -494,9 +541,9 @@
           "height": 284
         },
         "id": "voTJzcWBC_PJ",
-        "outputId": "9a36a9a8-a676-4864-8beb-24fb1c22fd80"
+        "outputId": "48496b42-e76d-4ff1-e4ae-7fb8326334b4"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,7 +575,8 @@
         "# add a legend to the plot\n",
         "plt.legend()\n",
         "\n",
-        "plt.show()"
+        "plt.savefig(\"scatter_cbd_cbd.pdf\", format=\"pdf\")\n",
+        "#files.download(\"scatter_cbd_cbd.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -536,9 +584,9 @@
           "height": 279
         },
         "id": "BoZEsI-A9o15",
-        "outputId": "7a0d860f-285f-4f64-cac9-b3b8f2126894"
+        "outputId": "fa5e0983-e7e7-447d-cd76-bd73c8ae66c1"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -565,9 +613,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ECJ5p263Fr0j",
-        "outputId": "f14b1e71-150d-4beb-f274-0725b1dd89c1"
+        "outputId": "79aee247-d7cf-4d0d-be8e-cf4ca808f07b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +625,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compute the correlation between the original pairwise distances and the cophenetic distances, which gives us a measure of the statistical significance of the cophenetic correlation coefficient.\n",
+        "corr, pval = pearsonr(pdist(coords), coph_dists)\n",
+        "pval\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TphtJuXWoSFG",
+        "outputId": "ae7391a9-6a9b-419b-ba20-674508a5c576"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.26175161356619836"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
         }
       ]
     },
@@ -592,7 +668,9 @@
         "z = hac.linkage(a, method='average', metric='euclidean')\n",
         "plt.figure()\n",
         "plt.title('centroids_veh_cbd')\n",
-        "dn = hac.dendrogram(z, labels=frame.index)"
+        "dn = hac.dendrogram(z, labels=frame.index)\n",
+        "plt.savefig(\"dendrogram_veh_cbd.pdf\", format=\"pdf\")\n",
+        "#files.download(\"dendrogram_veh_cbd.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -600,9 +678,9 @@
           "height": 284
         },
         "id": "ON9s-l1D5Xsq",
-        "outputId": "5513f6da-028f-4b5a-e246-76ae2ad8e485"
+        "outputId": "3dacae26-cb9a-4fbc-9534-f050a78aa3b0"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -634,7 +712,9 @@
         "# add a legend to the plot\n",
         "plt.legend()\n",
         "\n",
-        "plt.show()"
+        "#plt.show()\n",
+        "plt.savefig(\"scatter_veh_cbd.pdf\", format=\"pdf\")\n",
+        "#files.download(\"scatter_veh_cbd.pdf\")"
       ],
       "metadata": {
         "colab": {
@@ -642,9 +722,9 @@
           "height": 279
         },
         "id": "QYzEUOFj-yv-",
-        "outputId": "0a987731-a165-4442-b6ba-77c9530b393b"
+        "outputId": "5dc4c5a9-f7be-47f6-872e-f31ccff8a6d9"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -671,9 +751,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I7dqpRWSDkpY",
-        "outputId": "afe0e33b-a7d5-421e-8a69-e1865819a5b9"
+        "outputId": "8322f954-cf42-4e50-a576-46aa132148c9"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +763,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compute the correlation between the original pairwise distances and the cophenetic distances, which gives us a measure of the statistical significance of the cophenetic correlation coefficient.\n",
+        "corr, pval = pearsonr(pdist(coords), coph_dists)\n",
+        "pval\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rrUoauMLophH",
+        "outputId": "88b7be72-96fd-4b62-93d8-79e2e2f3f574"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.03268839324315908"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
         }
       ]
     }
